uzh/UzhLangParser.cpp

// Generated from UzhLang.g4 by ANTLR 4.7.2


#include "UzhLangListener.h"
#include "UzhLangVisitor.h"

#include "UzhLangParser.h"


using namespace antlrcpp;
using namespace antlr4;

UzhLangParser::UzhLangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

UzhLangParser::~UzhLangParser() {
  delete _interpreter;
}

std::string UzhLangParser::getGrammarFileName() const {
  return "UzhLang.g4";
}

const std::vector<std::string>& UzhLangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& UzhLangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

UzhLangParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

UzhLangParser::CodeContext* UzhLangParser::ProgramContext::code() {
  return getRuleContext<UzhLangParser::CodeContext>(0);
}

tree::TerminalNode* UzhLangParser::ProgramContext::EOF() {
  return getToken(UzhLangParser::EOF, 0);
}


size_t UzhLangParser::ProgramContext::getRuleIndex() const {
  return UzhLangParser::RuleProgram;
}

void UzhLangParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void UzhLangParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any UzhLangParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::ProgramContext* UzhLangParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, UzhLangParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(24);
    code();
    setState(25);
    match(UzhLangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CodeContext ------------------------------------------------------------------

UzhLangParser::CodeContext::CodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<UzhLangParser::LineContext *> UzhLangParser::CodeContext::line() {
  return getRuleContexts<UzhLangParser::LineContext>();
}

UzhLangParser::LineContext* UzhLangParser::CodeContext::line(size_t i) {
  return getRuleContext<UzhLangParser::LineContext>(i);
}

std::vector<tree::TerminalNode *> UzhLangParser::CodeContext::BOL() {
  return getTokens(UzhLangParser::BOL);
}

tree::TerminalNode* UzhLangParser::CodeContext::BOL(size_t i) {
  return getToken(UzhLangParser::BOL, i);
}


size_t UzhLangParser::CodeContext::getRuleIndex() const {
  return UzhLangParser::RuleCode;
}

void UzhLangParser::CodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCode(this);
}

void UzhLangParser::CodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCode(this);
}


antlrcpp::Any UzhLangParser::CodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitCode(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::CodeContext* UzhLangParser::code() {
  CodeContext *_localctx = _tracker.createInstance<CodeContext>(_ctx, getState());
  enterRule(_localctx, 2, UzhLangParser::RuleCode);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(29);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(27);
        line();
        break;
      }

      case 2: {
        setState(28);
        match(UzhLangParser::BOL);
        break;
      }

      }
      setState(31); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == UzhLangParser::BOL

    || _la == UzhLangParser::DEF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

UzhLangParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

UzhLangParser::FunctionLineContext* UzhLangParser::LineContext::functionLine() {
  return getRuleContext<UzhLangParser::FunctionLineContext>(0);
}

UzhLangParser::WhileLineContext* UzhLangParser::LineContext::whileLine() {
  return getRuleContext<UzhLangParser::WhileLineContext>(0);
}

UzhLangParser::IfLineContext* UzhLangParser::LineContext::ifLine() {
  return getRuleContext<UzhLangParser::IfLineContext>(0);
}

UzhLangParser::ElseLineContext* UzhLangParser::LineContext::elseLine() {
  return getRuleContext<UzhLangParser::ElseLineContext>(0);
}

UzhLangParser::AssignLineContext* UzhLangParser::LineContext::assignLine() {
  return getRuleContext<UzhLangParser::AssignLineContext>(0);
}

UzhLangParser::ExprLineContext* UzhLangParser::LineContext::exprLine() {
  return getRuleContext<UzhLangParser::ExprLineContext>(0);
}

UzhLangParser::ReturnLineContext* UzhLangParser::LineContext::returnLine() {
  return getRuleContext<UzhLangParser::ReturnLineContext>(0);
}


size_t UzhLangParser::LineContext::getRuleIndex() const {
  return UzhLangParser::RuleLine;
}

void UzhLangParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void UzhLangParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}


antlrcpp::Any UzhLangParser::LineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitLine(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::LineContext* UzhLangParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 4, UzhLangParser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(33);
      functionLine();
      break;
    }

    case 2: {
      setState(34);
      whileLine();
      break;
    }

    case 3: {
      setState(35);
      ifLine();
      break;
    }

    case 4: {
      setState(36);
      elseLine();
      break;
    }

    case 5: {
      setState(37);
      assignLine();
      break;
    }

    case 6: {
      setState(38);
      exprLine();
      break;
    }

    case 7: {
      setState(39);
      returnLine();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionLineContext ------------------------------------------------------------------

UzhLangParser::FunctionLineContext::FunctionLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UzhLangParser::FunctionLineContext::DEF() {
  return getToken(UzhLangParser::DEF, 0);
}

std::vector<tree::TerminalNode *> UzhLangParser::FunctionLineContext::ID() {
  return getTokens(UzhLangParser::ID);
}

tree::TerminalNode* UzhLangParser::FunctionLineContext::ID(size_t i) {
  return getToken(UzhLangParser::ID, i);
}

tree::TerminalNode* UzhLangParser::FunctionLineContext::BOL() {
  return getToken(UzhLangParser::BOL, 0);
}


size_t UzhLangParser::FunctionLineContext::getRuleIndex() const {
  return UzhLangParser::RuleFunctionLine;
}

void UzhLangParser::FunctionLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionLine(this);
}

void UzhLangParser::FunctionLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionLine(this);
}


antlrcpp::Any UzhLangParser::FunctionLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitFunctionLine(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::FunctionLineContext* UzhLangParser::functionLine() {
  FunctionLineContext *_localctx = _tracker.createInstance<FunctionLineContext>(_ctx, getState());
  enterRule(_localctx, 6, UzhLangParser::RuleFunctionLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == UzhLangParser::BOL) {
      setState(42);
      match(UzhLangParser::BOL);
    }
    setState(45);
    match(UzhLangParser::DEF);
    setState(46);
    match(UzhLangParser::ID);
    setState(47);
    match(UzhLangParser::T__0);
    setState(56);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == UzhLangParser::ID) {
      setState(48);
      match(UzhLangParser::ID);
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == UzhLangParser::T__1) {
        setState(49);
        match(UzhLangParser::T__1);
        setState(50);
        match(UzhLangParser::ID);
        setState(55);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(58);
    match(UzhLangParser::T__2);
    setState(59);
    match(UzhLangParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileLineContext ------------------------------------------------------------------

UzhLangParser::WhileLineContext::WhileLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UzhLangParser::WhileLineContext::BOL() {
  return getToken(UzhLangParser::BOL, 0);
}

tree::TerminalNode* UzhLangParser::WhileLineContext::WHILE() {
  return getToken(UzhLangParser::WHILE, 0);
}

UzhLangParser::ExprContext* UzhLangParser::WhileLineContext::expr() {
  return getRuleContext<UzhLangParser::ExprContext>(0);
}


size_t UzhLangParser::WhileLineContext::getRuleIndex() const {
  return UzhLangParser::RuleWhileLine;
}

void UzhLangParser::WhileLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhileLine(this);
}

void UzhLangParser::WhileLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhileLine(this);
}


antlrcpp::Any UzhLangParser::WhileLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitWhileLine(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::WhileLineContext* UzhLangParser::whileLine() {
  WhileLineContext *_localctx = _tracker.createInstance<WhileLineContext>(_ctx, getState());
  enterRule(_localctx, 8, UzhLangParser::RuleWhileLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(UzhLangParser::BOL);
    setState(62);
    match(UzhLangParser::WHILE);
    setState(63);
    expr(0);
    setState(64);
    match(UzhLangParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfLineContext ------------------------------------------------------------------

UzhLangParser::IfLineContext::IfLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UzhLangParser::IfLineContext::BOL() {
  return getToken(UzhLangParser::BOL, 0);
}

tree::TerminalNode* UzhLangParser::IfLineContext::IF() {
  return getToken(UzhLangParser::IF, 0);
}

UzhLangParser::ExprContext* UzhLangParser::IfLineContext::expr() {
  return getRuleContext<UzhLangParser::ExprContext>(0);
}


size_t UzhLangParser::IfLineContext::getRuleIndex() const {
  return UzhLangParser::RuleIfLine;
}

void UzhLangParser::IfLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfLine(this);
}

void UzhLangParser::IfLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfLine(this);
}


antlrcpp::Any UzhLangParser::IfLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitIfLine(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::IfLineContext* UzhLangParser::ifLine() {
  IfLineContext *_localctx = _tracker.createInstance<IfLineContext>(_ctx, getState());
  enterRule(_localctx, 10, UzhLangParser::RuleIfLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(UzhLangParser::BOL);
    setState(67);
    match(UzhLangParser::IF);
    setState(68);
    expr(0);
    setState(69);
    match(UzhLangParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElseLineContext ------------------------------------------------------------------

UzhLangParser::ElseLineContext::ElseLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UzhLangParser::ElseLineContext::BOL() {
  return getToken(UzhLangParser::BOL, 0);
}

tree::TerminalNode* UzhLangParser::ElseLineContext::ELSE() {
  return getToken(UzhLangParser::ELSE, 0);
}


size_t UzhLangParser::ElseLineContext::getRuleIndex() const {
  return UzhLangParser::RuleElseLine;
}

void UzhLangParser::ElseLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElseLine(this);
}

void UzhLangParser::ElseLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElseLine(this);
}


antlrcpp::Any UzhLangParser::ElseLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitElseLine(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::ElseLineContext* UzhLangParser::elseLine() {
  ElseLineContext *_localctx = _tracker.createInstance<ElseLineContext>(_ctx, getState());
  enterRule(_localctx, 12, UzhLangParser::RuleElseLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(UzhLangParser::BOL);
    setState(72);
    match(UzhLangParser::ELSE);
    setState(73);
    match(UzhLangParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignLineContext ------------------------------------------------------------------

UzhLangParser::AssignLineContext::AssignLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UzhLangParser::AssignLineContext::BOL() {
  return getToken(UzhLangParser::BOL, 0);
}

tree::TerminalNode* UzhLangParser::AssignLineContext::ID() {
  return getToken(UzhLangParser::ID, 0);
}

UzhLangParser::ExprContext* UzhLangParser::AssignLineContext::expr() {
  return getRuleContext<UzhLangParser::ExprContext>(0);
}


size_t UzhLangParser::AssignLineContext::getRuleIndex() const {
  return UzhLangParser::RuleAssignLine;
}

void UzhLangParser::AssignLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignLine(this);
}

void UzhLangParser::AssignLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignLine(this);
}


antlrcpp::Any UzhLangParser::AssignLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitAssignLine(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::AssignLineContext* UzhLangParser::assignLine() {
  AssignLineContext *_localctx = _tracker.createInstance<AssignLineContext>(_ctx, getState());
  enterRule(_localctx, 14, UzhLangParser::RuleAssignLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(UzhLangParser::BOL);
    setState(76);
    match(UzhLangParser::ID);
    setState(77);
    match(UzhLangParser::T__4);
    setState(78);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnLineContext ------------------------------------------------------------------

UzhLangParser::ReturnLineContext::ReturnLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UzhLangParser::ReturnLineContext::BOL() {
  return getToken(UzhLangParser::BOL, 0);
}

tree::TerminalNode* UzhLangParser::ReturnLineContext::RETURN() {
  return getToken(UzhLangParser::RETURN, 0);
}

UzhLangParser::ExprContext* UzhLangParser::ReturnLineContext::expr() {
  return getRuleContext<UzhLangParser::ExprContext>(0);
}


size_t UzhLangParser::ReturnLineContext::getRuleIndex() const {
  return UzhLangParser::RuleReturnLine;
}

void UzhLangParser::ReturnLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnLine(this);
}

void UzhLangParser::ReturnLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnLine(this);
}


antlrcpp::Any UzhLangParser::ReturnLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitReturnLine(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::ReturnLineContext* UzhLangParser::returnLine() {
  ReturnLineContext *_localctx = _tracker.createInstance<ReturnLineContext>(_ctx, getState());
  enterRule(_localctx, 16, UzhLangParser::RuleReturnLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(UzhLangParser::BOL);
    setState(81);
    match(UzhLangParser::RETURN);
    setState(82);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprLineContext ------------------------------------------------------------------

UzhLangParser::ExprLineContext::ExprLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UzhLangParser::ExprLineContext::BOL() {
  return getToken(UzhLangParser::BOL, 0);
}

UzhLangParser::ExprContext* UzhLangParser::ExprLineContext::expr() {
  return getRuleContext<UzhLangParser::ExprContext>(0);
}


size_t UzhLangParser::ExprLineContext::getRuleIndex() const {
  return UzhLangParser::RuleExprLine;
}

void UzhLangParser::ExprLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprLine(this);
}

void UzhLangParser::ExprLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprLine(this);
}


antlrcpp::Any UzhLangParser::ExprLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitExprLine(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::ExprLineContext* UzhLangParser::exprLine() {
  ExprLineContext *_localctx = _tracker.createInstance<ExprLineContext>(_ctx, getState());
  enterRule(_localctx, 18, UzhLangParser::RuleExprLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(UzhLangParser::BOL);
    setState(85);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncCallContext ------------------------------------------------------------------

UzhLangParser::FuncCallContext::FuncCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UzhLangParser::FuncCallContext::ID() {
  return getToken(UzhLangParser::ID, 0);
}

std::vector<UzhLangParser::ExprContext *> UzhLangParser::FuncCallContext::expr() {
  return getRuleContexts<UzhLangParser::ExprContext>();
}

UzhLangParser::ExprContext* UzhLangParser::FuncCallContext::expr(size_t i) {
  return getRuleContext<UzhLangParser::ExprContext>(i);
}


size_t UzhLangParser::FuncCallContext::getRuleIndex() const {
  return UzhLangParser::RuleFuncCall;
}

void UzhLangParser::FuncCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncCall(this);
}

void UzhLangParser::FuncCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UzhLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncCall(this);
}


antlrcpp::Any UzhLangParser::FuncCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UzhLangVisitor*>(visitor))
    return parserVisitor->visitFuncCall(this);
  else
    return visitor->visitChildren(this);
}

UzhLangParser::FuncCallContext* UzhLangParser::funcCall() {
  FuncCallContext *_localctx = _tracker.createInstance<FuncCallContext>(_ctx, getState());
  enterRule(_localctx, 20, UzhLangParser::RuleFuncCall);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(UzhLangParser::ID);
    setState(88);
    match(UzhLangParser::T__0);
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << UzhLangParser::T__0)
      | (1ULL << UzhLangParser::INT)
      | (1ULL << UzhLangParser::NOT)
      | (1ULL << UzhLangParser::ID))) != 0)) {
      setState(89);
      expr(0);
      setState(94);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == UzhLangParser::T__1) {
        setState(90);
        match(UzhLangParser::T__1);
        setState(91);
        expr(0);
        setState(96);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(99);
    match(UzhLangParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

UzhLangParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
